<?xml version="1.0" encoding="utf-8"?>
<!--It provides a scrollable view for content-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailFragment">

<!--    vertical layout container that will contain your UI elements-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >

    <!-- Product Image -->
    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:contentDescription="@string/product_image"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bar_chair" />

<!-- Virtual Try Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/virtual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="4dp"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        app:icon="@drawable/ic_twotone_photo_camera_24"
        android:text="@string/try_in_your_home"
        android:textColor="@color/black"
        app:iconTint="@color/black"
        android:layout_gravity="center"
        />

        <!-- Product Name -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        tools:text="Smart TV" />

        <!-- Price Layout -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <!-- Currency -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_gravity="top"
                android:text="@string/rupee"
                />

            <!-- Product Price -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="6dp"
                tools:text="65,000" />

            <!--Paise-->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/paise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/_00" />

        </LinearLayout>

        <!-- Product Details Title -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/product_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:text="@string/product_details" />

        <!-- Product Full Description -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/product_full_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Watch full hd and 4k movies and series in this latest model." />

        <!-- In Stock Label -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/in_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#00695C"
        android:layout_marginBottom="4dp"
        android:text="@string/in_stock" />

        <!-- Add to Cart Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_to_cart"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:cornerRadius="6dp"
        android:text="@string/add_to_cart"
        android:backgroundTint="#FFC805"
        android:textColor="@color/black"
        android:layout_marginBottom="4dp"
        />

        <!-- Buy Now Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buy_now"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:cornerRadius="6dp"
        android:text="@string/buy_now"
        android:backgroundTint="#FD8421"
        android:textColor="@color/black"
        />

    </LinearLayout>
</ScrollView>